[gd_scene load_steps=6 format=3 uid="uid://cnbwycrphattn"]

[ext_resource type="Script" path="res://Scenes/World/Levels/level.gd" id="1_m3wdj"]
[ext_resource type="PackedScene" uid="uid://cibwhf4tqdq7g" path="res://Scenes/World/Tiles/castleTiles.tscn" id="2_awle2"]
[ext_resource type="PackedScene" uid="uid://00rnn2sr0t2r" path="res://Scenes/World/Levels/level_end.tscn" id="3_12rax"]
[ext_resource type="PackedScene" uid="uid://d0h086fam4e1b" path="res://Scenes/World/Tiles/spikes.tscn" id="4_foctc"]
[ext_resource type="PackedScene" uid="uid://da4s40vtvfjng" path="res://Scenes/Entities/player/player.tscn" id="5_05rt7"]

[node name="level_3" type="Node2D"]
script = ExtResource("1_m3wdj")

[node name="dungeonTileSet" parent="." instance=ExtResource("2_awle2")]
layer_0/tile_data = PackedInt32Array(262152, 65536, 1, 196616, 65536, 5, 131080, 0, 1, 65544, 0, 1, 8, 0, 1, -65528, 0, 1, -131064, 0, 1, -196600, 0, 1, -262136, 0, 1, -327672, 65536, 4, -327673, 65536, 2, -327674, 65536, 2, -327675, 65536, 2, -327676, 65536, 2, -327677, 65536, 2, -327678, 65536, 2, -327679, 65536, 2, -327680, 65536, 2, -262145, 65536, 2, -262146, 65536, 2, -262147, 65536, 2, -262148, 65536, 2, -262149, 65536, 2, -262150, 65536, 2, -262151, 65536, 2, -262152, 65536, 2, -262153, 0, 4, -196617, 131072, 1, -131081, 131072, 1, -327690, 0, 0, -262154, 0, 1, -196618, 0, 1, -131082, 0, 1, -65546, 0, 1, -10, 0, 1, 65526, 0, 1, 131062, 0, 1, 196598, 0, 1, 262134, 0, 1, 327670, 0, 1, 393207, 65536, 2, 393206, 0, 2, 393208, 65536, 2, 393209, 65536, 2, 393210, 65536, 2, 393211, 65536, 2, 393212, 65536, 2, 393213, 65536, 2, 393214, 65536, 2, 393215, 65536, 2, 327680, 65536, 2, 327681, 65536, 2, 327682, 65536, 2, 327683, 65536, 2, 327684, 65536, 2, 327685, 65536, 2, 327686, 65536, 2, 327687, 65536, 2, 327688, 65536, 2, 327689, 131072, 2, 262153, 131072, 1, 196617, 131072, 1, 131081, 131072, 1, -196599, 131072, 1, -131063, 131072, 1, -65527, 131072, 1, 9, 131072, 1, 65545, 131072, 1, -262135, 131072, 1, -327671, 131072, 1, -393207, 131072, 0, -393208, 65536, 0, -393209, 65536, 0, -393210, 65536, 0, -393211, 65536, 0, -393212, 65536, 0, -393213, 65536, 0, -393214, 65536, 0, -393215, 65536, 0, -393216, 65536, 0, -327681, 65536, 0, -327682, 65536, 0, -327683, 65536, 0, -327684, 65536, 0, -327685, 65536, 0, -327686, 65536, 0, -327687, 65536, 0, -327688, 65536, 0, -327689, 65536, 0, -65543, 0, 6, -196615, 0, 6, -196616, 0, 6, -65544, 0, 6, -196614, 0, 6, -196613, 0, 6, -196612, 0, 6, -131075, 0, 6, -196611, 0, 6, -196610, 0, 6, -131074, 0, 6, -131073, 0, 6, -196609, 0, 6, -262144, 0, 6, -196608, 0, 6, -262143, 0, 6, -262142, 0, 6, -65535, 0, 6, -65536, 0, 6, -1, 0, 6, -2, 0, 6, -3, 0, 6, -262140, 0, 6, -262141, 0, 6, -262139, 0, 6, -262138, 0, 6, -262137, 0, 6, 5, 0, 6, 6, 0, 6, -65533, 0, 6, -65534, 0, 6, 262151, 65536, 1, 262150, 65536, 1, 262149, 65536, 1, 262148, 65536, 1, 262147, 65536, 5, 262146, 65536, 0, 262145, 65536, 0, 262144, 0, 5, 327679, 65536, 5, 327678, 65536, 0, 327677, 65536, 0, 327676, 0, 5, 327675, 65536, 1, 327674, 65536, 1, 327673, 65536, 1, 327672, 65536, 1, 327671, 65536, 1, 262135, 0, 5, 196599, 131072, 1, 131063, 131072, 1, 65527, 131072, 1, -9, 131072, 1, -65545, 131072, 1, -8, 0, 6, 131079, 0, 6, 65543, 0, 6, 7, 0, 6, -131066, 0, 6, -131067, 0, 6, -131068, 0, 6, -131069, 0, 6, -131070, 0, 6, -65541, 0, 6, -65542, 0, 6, 65542, 0, 6, 65541, 0, 6, 65540, 0, 6, 1, 0, 6, 0, 0, 6, 65535, 0, 6, -65540, 0, 6, -131076, 0, 6, -131077, 0, 6, 131069, 0, 6, 65533, 0, 6, 65532, 0, 6, -4, 0, 6, -5, 0, 6, -6, 0, 6, -7, 0, 6, 65529, 0, 6, 65528, 0, 6, 131064, 0, 6, 131065, 0, 6, 131067, 0, 6, 65531, 0, 6, 65530, 0, 6, 131066, 0, 6, 131068, 0, 6, 131071, 0, 6, 131070, 0, 6, 65534, 0, 6, 65536, 0, 6, 65537, 0, 6, 65538, 0, 6, 2, 0, 6, 3, 0, 6, 65539, 0, 6, 4, 0, 6, -65532, 0, 6, -65531, 0, 6, -65530, 0, 6, -65529, 0, 6, -131065, 0, 6, -196601, 0, 6, -196602, 0, 6, -196603, 0, 6, -196604, 0, 6, -196605, 0, 6, -196606, 0, 6, -196607, 0, 6, -131071, 0, 6, -131072, 0, 6, -65537, 0, 6, -65538, 0, 6, -65539, 0, 6, -131078, 0, 6, -131079, 0, 6, -131080, 0, 6, 196614, 65536, 0, 196613, 65536, 0, 196612, 65536, 0, 196611, 0, 0, 196608, 131072, 0, 262143, 0, 0, 262140, 131072, 0, 262139, 65536, 0, 262138, 65536, 0, 262137, 65536, 0, 262136, 65536, 0, 196601, 0, 6, 196600, 0, 6, 196602, 0, 6, 196603, 0, 6, 196604, 0, 6, 196605, 0, 6, 262141, 0, 6, 262142, 0, 6, 196606, 0, 6, 196607, 0, 6, 131072, 0, 6, 131073, 0, 6, 196609, 0, 6, 196610, 0, 6, 131074, 0, 6, 131075, 0, 6, 131076, 0, 6, 131077, 0, 6, 131078, 0, 6, 196615, 65536, 0)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="level_end" parent="." instance=ExtResource("3_12rax")]
position = Vector2(-120, 40)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(32, 56)
metadata/_edit_group_ = true

[node name="spikes" parent="Node2D" instance=ExtResource("4_foctc")]
position = Vector2(-8, 0)

[node name="spikes2" parent="Node2D" instance=ExtResource("4_foctc")]
position = Vector2(8, 0)

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2(-32, 56)
metadata/_edit_group_ = true

[node name="spikes" parent="Node2D2" instance=ExtResource("4_foctc")]
position = Vector2(-8, 0)

[node name="spikes2" parent="Node2D2" instance=ExtResource("4_foctc")]
position = Vector2(8, 0)

[node name="player" parent="." instance=ExtResource("5_05rt7")]
position = Vector2(120, 40)
