[gd_scene load_steps=6 format=3 uid="uid://ch8pwcgfiys8x"]

[ext_resource type="Script" uid="uid://d35srkt10c3j0" path="res://Scenes/World/Levels/level.gd" id="1_7mxhe"]
[ext_resource type="PackedScene" uid="uid://cibwhf4tqdq7g" path="res://Scenes/World/Tiles/castleTiles.tscn" id="2_e8b34"]
[ext_resource type="PackedScene" uid="uid://00rnn2sr0t2r" path="res://Scenes/World/Levels/level_end.tscn" id="3_6ckb2"]
[ext_resource type="PackedScene" uid="uid://d0h086fam4e1b" path="res://Scenes/World/Tiles/spikes.tscn" id="4_37aae"]
[ext_resource type="PackedScene" uid="uid://da4s40vtvfjng" path="res://Scenes/Entities/player/player.tscn" id="5_frc6l"]

[node name="level_5" type="Node2D"]
script = ExtResource("1_7mxhe")

[node name="dungeonTileSet" parent="." instance=ExtResource("2_e8b34")]
layer_0/tile_data = PackedInt32Array(262152, 65536, 5, 196616, 0, 1, 131080, 0, 1, 65544, 0, 1, 8, 0, 1, -65528, 0, 1, -131064, 65536, 5, -196600, 0, 1, -262136, 0, 1, -327672, 65536, 4, -327673, 65536, 2, -327674, 65536, 2, -327675, 65536, 2, -327676, 65536, 2, -327677, 65536, 2, -327678, 65536, 2, -327679, 65536, 2, -327680, 65536, 2, -262145, 65536, 2, -262146, 65536, 2, -262147, 65536, 2, -262148, 65536, 2, -262149, 65536, 2, -262150, 65536, 2, -262151, 65536, 2, -262152, 65536, 2, -262153, 0, 4, -196617, 131072, 1, -131081, 131072, 1, -327690, 0, 0, -262154, 0, 1, -196618, 0, 1, -131082, 0, 1, -65546, 0, 1, -10, 0, 1, 65526, 0, 1, 131062, 0, 1, 196598, 0, 1, 262134, 0, 1, 327670, 0, 1, 393207, 65536, 2, 393206, 0, 2, 393208, 65536, 2, 393209, 65536, 2, 393210, 65536, 2, 393211, 65536, 2, 393212, 65536, 2, 393213, 65536, 2, 393214, 65536, 2, 393215, 65536, 2, 327680, 65536, 2, 327681, 65536, 2, 327682, 65536, 2, 327683, 65536, 2, 327684, 65536, 2, 327685, 65536, 2, 327686, 65536, 2, 327687, 65536, 2, 327688, 65536, 2, 327689, 131072, 2, 262153, 131072, 1, 196617, 131072, 1, 131081, 131072, 1, -196599, 131072, 1, -131063, 131072, 1, -65527, 131072, 1, 9, 131072, 1, 65545, 131072, 1, -262135, 131072, 1, -327671, 131072, 1, -393207, 131072, 0, -393208, 65536, 0, -393209, 65536, 0, -393210, 65536, 0, -393211, 65536, 0, -393212, 65536, 0, -393213, 65536, 0, -393214, 65536, 0, -393215, 65536, 0, -393216, 65536, 0, -327681, 65536, 0, -327682, 65536, 0, -327683, 65536, 0, -327684, 65536, 0, -327685, 65536, 0, -327686, 65536, 0, -327687, 65536, 0, -327688, 65536, 0, -327689, 65536, 0, 196607, 65536, 0, 131071, 0, 6, 131070, 131072, 0, 131069, 0, 5, 131068, 65536, 1, -5, 0, 6, -6, 196608, 0, -7, 0, 6, -65543, 0, 6, -131079, 65536, 3, -196615, 0, 6, -196616, 0, 6, -131080, 65536, 3, -65544, 0, 6, -196614, 0, 6, -196613, 0, 6, -196612, 0, 6, -131075, 0, 6, -196611, 0, 6, -196610, 0, 6, -131074, 0, 6, -131073, 0, 6, -196609, 0, 6, -262144, 0, 6, -196608, 0, 6, -196607, 0, 3, -262143, 0, 6, -262142, 0, 6, -196606, 65536, 3, -65535, 0, 6, -65536, 0, 6, -1, 0, 6, -2, 0, 6, -3, 0, 6, 131072, 65536, 0, 131073, 65536, 5, 131074, 65536, 1, -65532, 0, 6, -196604, 65536, 3, -262140, 0, 6, -262141, 0, 6, -196605, 65536, 3, -262139, 0, 6, -196603, 131072, 3, -196602, 0, 6, -262138, 0, 6, -262137, 0, 6, -196601, 0, 6, -65530, 65536, 3, -65531, 0, 3, 5, 0, 6, 6, 0, 6, 131078, 0, 6, 131077, 0, 6, -65533, 0, 6, -65534, 0, 6, 131065, 65536, 1, 196601, 65536, 1, 196604, 65536, 1, 262151, 65536, 0, 262150, 65536, 0, 262149, 0, 5, 262148, 65536, 1, 262147, 65536, 1, 262146, 65536, 1, 262145, 65536, 1, 262144, 65536, 1, 327679, 65536, 1, 327678, 65536, 1, 327677, 65536, 1, 327676, 65536, 1, 327675, 65536, 1, 327674, 65536, 1, 327673, 65536, 1, 327672, 65536, 1, 327671, 65536, 1, 262135, 65536, 1, 196599, 65536, 1, 131063, 65536, 1, 65527, 0, 5, -9, 131072, 1, -65545, 131072, 1, 131067, 65536, 1, 65531, 65536, 0, 65530, 65536, 5, 65529, 65536, 0, 65528, 65536, 0, -8, 0, 6, 131064, 65536, 1, 196600, 65536, 1, 262136, 65536, 1, 262137, 65536, 1, 196602, 65536, 1, 131066, 65536, 1, 196603, 65536, 1, 262140, 65536, 1, 262141, 65536, 1, 262142, 65536, 1, 262143, 65536, 1, 196608, 65536, 1, 196609, 65536, 1, 196610, 65536, 1, 196614, 0, 6, 196615, 0, 6, 131079, 0, 6, 65543, 0, 6, 7, 0, 6, -65529, 131072, 3, -131065, 0, 0, -131066, 0, 6, -131067, 0, 6, -131068, 0, 6, -131069, 0, 6, -131070, 0, 6, -131071, 196608, 2, -131072, 65536, 3, -65537, 65536, 3, -65538, 65536, 3, -65539, 0, 3, -65541, 0, 6, -65542, 0, 6, 65542, 0, 6, 65541, 0, 6, 65540, 0, 6, 65539, 131072, 0, 65538, 65536, 0, 1, 0, 6, 0, 0, 6, 65535, 0, 6, 65534, 0, 6, 65533, 131072, 0, 196613, 131072, 0, 131076, 131072, 0, 65537, 0, 0, -131078, 131072, 3, 65532, 65536, 0, 262138, 65536, 1, 262139, 65536, 1, 196605, 65536, 1, 196606, 0, 5, 196611, 65536, 1, 196612, 0, 5, 131075, 0, 5, 2, 196608, 0, 4, 0, 6, 3, 0, 6, 65536, 0, 6, -65540, 0, 6, -131076, 0, 6, -131077, 0, 6, -4, 0, 6)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="level_end" parent="." instance=ExtResource("3_6ckb2")]
position = Vector2(-120, -56)

[node name="spikes" parent="." instance=ExtResource("4_37aae")]
position = Vector2(-8, 24)

[node name="spikes2" parent="." instance=ExtResource("4_37aae")]
position = Vector2(8, 24)

[node name="player" parent="." instance=ExtResource("5_frc6l")]
position = Vector2(120, 56)
