[gd_scene load_steps=6 format=3 uid="uid://dwrk2rnbik3vl"]

[ext_resource type="Script" path="res://Scenes/World/Levels/level.gd" id="1_8glky"]
[ext_resource type="PackedScene" uid="uid://cibwhf4tqdq7g" path="res://Scenes/World/Tiles/castleTiles.tscn" id="2_dlo8q"]
[ext_resource type="PackedScene" uid="uid://00rnn2sr0t2r" path="res://Scenes/World/Levels/level_end.tscn" id="3_641y1"]
[ext_resource type="PackedScene" uid="uid://d0h086fam4e1b" path="res://Scenes/World/Tiles/spikes.tscn" id="4_qgloe"]
[ext_resource type="PackedScene" uid="uid://da4s40vtvfjng" path="res://Scenes/Entities/player/player.tscn" id="5_w67kl"]

[node name="level_6" type="Node2D"]
script = ExtResource("1_8glky")

[node name="dungeonTileSet" parent="." instance=ExtResource("2_dlo8q")]
layer_0/tile_data = PackedInt32Array(262152, 65536, 5, 196616, 0, 1, 131080, 0, 1, 65544, 0, 1, 8, 0, 1, -65528, 0, 1, -131064, 0, 1, -196600, 0, 1, -262136, 0, 1, -327672, 65536, 4, -327673, 65536, 2, -327674, 65536, 2, -327675, 65536, 2, -327676, 65536, 2, -327677, 65536, 2, -327678, 65536, 2, -327679, 65536, 2, -327680, 65536, 2, -262145, 65536, 2, -262146, 65536, 2, -262147, 65536, 2, -262148, 65536, 2, -262149, 65536, 2, -262150, 65536, 2, -262151, 65536, 2, -262152, 65536, 2, -262153, 0, 4, -196617, 131072, 1, -131081, 131072, 1, -327690, 0, 0, -262154, 0, 1, -196618, 0, 1, -131082, 0, 1, -65546, 0, 1, -10, 0, 1, 65526, 0, 1, 131062, 0, 1, 196598, 0, 1, 262134, 0, 1, 327670, 0, 1, 393207, 65536, 2, 393206, 0, 2, 393208, 65536, 2, 393209, 131072, 2, 393210, 65536, 3, 393211, 65536, 3, 393212, 65536, 3, 393213, 0, 2, 393214, 65536, 2, 393215, 65536, 2, 327680, 65536, 2, 327681, 65536, 2, 327682, 131072, 2, 327683, 65536, 3, 327684, 65536, 3, 327685, 65536, 3, 327686, 0, 2, 327687, 65536, 2, 327688, 65536, 2, 327689, 131072, 2, 262153, 131072, 1, 196617, 131072, 1, 131081, 131072, 1, -196599, 131072, 1, -131063, 131072, 1, -65527, 131072, 1, 9, 131072, 1, 65545, 131072, 1, -262135, 131072, 1, -327671, 131072, 1, -393207, 131072, 0, -393208, 65536, 0, -393209, 65536, 0, -393210, 65536, 0, -393211, 65536, 0, -393212, 65536, 0, -393213, 65536, 0, -393214, 65536, 0, -393215, 65536, 0, -393216, 65536, 0, -327681, 65536, 0, -327682, 65536, 0, -327683, 65536, 0, -327684, 65536, 0, -327685, 65536, 0, -327686, 65536, 0, -327687, 65536, 0, -327688, 65536, 0, -327689, 65536, 0, -196616, 65536, 6, 262151, 65536, 0, 262150, 0, 0, 262146, 131072, 0, 262145, 65536, 0, 262144, 65536, 0, 327679, 65536, 0, 327678, 65536, 0, 327677, 0, 0, 327673, 131072, 0, 327672, 65536, 0, 327671, 0, 5, 262135, 131072, 1, 196599, 131072, 1, 131063, 131072, 1, 65527, 131072, 1, -9, 131072, 1, -65545, 131072, 1, -131074, 0, 3, -131073, 65536, 3, -196608, 65536, 3, -196607, 131072, 3, -4, 0, 3, -3, 65536, 3, -2, 131072, 3, -65535, 0, 3, -65534, 65536, 3, -65533, 131072, 3, 131066, 0, 3, 131067, 65536, 3, 131068, 131072, 3, 65539, 0, 3, 65540, 65536, 3, 65541, 131072, 3, 196605, 196608, 3, 196601, 196608, 3, 131074, 196608, 3, 131078, 196608, 3, -131078, 0, 6, -196614, 0, 6, -196615, 0, 6, -131079, 0, 6, -131080, 0, 6, -65544, 0, 6, -8, 0, 6, 65528, 0, 6, 131064, 0, 6, 196600, 0, 6, 262136, 0, 6, 262137, 0, 6, 262138, 0, 6, 196602, 65536, 6, 196603, 0, 6, 262139, 0, 6, 327675, 0, 6, 327674, 0, 6, 327676, 0, 6, 262140, 0, 6, 196604, 0, 6, 262141, 0, 6, 262142, 0, 6, 196606, 0, 6, 131070, 0, 6, 65534, 0, 6, 65533, 0, 6, 65532, 0, 6, 65531, 458752, 2, -5, 458752, 1, -65541, 458752, 1, -131077, 458752, 0, -196613, 458752, 6, -196612, 0, 6, -131076, 0, 6, -65540, 0, 6, -65539, 0, 6, -131075, 0, 6, -196611, 0, 6, -196610, 0, 6, -196609, 0, 6, -262144, 0, 6, -262143, 0, 6, -262142, 0, 6, -196606, 0, 6, -131070, 0, 6, -131071, 0, 6, -131072, 0, 6, -65537, 0, 6, -65538, 0, 6, -1, 0, 6, 65535, 0, 6, 131071, 0, 6, 196607, 0, 6, 262143, 0, 6, 196608, 0, 6, 131072, 0, 6, 65536, 0, 6, 0, 0, 6, -65536, 0, 6, 1, 0, 6, 65537, 0, 6, 131073, 0, 6, 196609, 0, 6, 196610, 0, 6, 196611, 0, 6, 131075, 0, 6, 131076, 0, 6, 196612, 0, 6, 262148, 0, 6, 262147, 0, 6, 262149, 0, 6, 196613, 0, 6, 131077, 0, 6, 196614, 0, 6, 196615, 65536, 6, 131079, 0, 6, 65543, 0, 6, 7, 0, 6, -65529, 0, 6, -131065, 0, 6, -196601, 0, 6, -262137, 0, 6, -262138, 0, 6, -262139, 0, 6, -262140, 458752, 6, -262141, 0, 6, -196605, 0, 6, -131069, 0, 6, -131068, 458752, 1, -196604, 458752, 0, -196603, 0, 6, -131067, 0, 6, -65531, 0, 6, -65532, 458752, 1, 4, 458752, 2, 3, 0, 6, 2, 65536, 6, 65538, 0, 6, 5, 0, 6, 6, 0, 6, -65530, 0, 6, -131066, 0, 6, -196602, 0, 6, 65542, 0, 6, -65542, 0, 6, -65543, 0, 6, -7, 0, 6, 65529, 0, 6, 131065, 0, 6, 65530, 0, 6, -6, 0, 6, 131069, 0, 6)
layer_1/tile_data = PackedInt32Array(-196613, 0, 7, -262140, 0, 7)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="level_end" parent="." instance=ExtResource("3_641y1")]
position = Vector2(0, 56)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-72, 72)
metadata/_edit_group_ = true

[node name="spikes" parent="Node2D" instance=ExtResource("4_qgloe")]
position = Vector2(-16, 0)

[node name="spikes2" parent="Node2D" instance=ExtResource("4_qgloe")]

[node name="spikes3" parent="Node2D" instance=ExtResource("4_qgloe")]
position = Vector2(16, 0)

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2(72, 72)
metadata/_edit_group_ = true

[node name="spikes" parent="Node2D2" instance=ExtResource("4_qgloe")]
position = Vector2(-16, 0)

[node name="spikes2" parent="Node2D2" instance=ExtResource("4_qgloe")]

[node name="spikes3" parent="Node2D2" instance=ExtResource("4_qgloe")]
position = Vector2(16, 0)

[node name="Node2D3" type="Node2D" parent="."]
position = Vector2(0, 32)
metadata/_edit_group_ = true

[node name="spikes" parent="Node2D3" instance=ExtResource("4_qgloe")]
position = Vector2(-16, 0)

[node name="spikes2" parent="Node2D3" instance=ExtResource("4_qgloe")]

[node name="spikes3" parent="Node2D3" instance=ExtResource("4_qgloe")]
position = Vector2(16, 0)

[node name="player" parent="." instance=ExtResource("5_w67kl")]
position = Vector2(0, -56)
