[gd_scene load_steps=6 format=3 uid="uid://ygx7frg5y6q7"]

[ext_resource type="Script" path="res://Scenes/World/Levels/level.gd" id="1_uojfp"]
[ext_resource type="PackedScene" uid="uid://cibwhf4tqdq7g" path="res://Scenes/World/Tiles/castleTiles.tscn" id="2_fk8c7"]
[ext_resource type="PackedScene" uid="uid://da4s40vtvfjng" path="res://Scenes/Entities/player/player.tscn" id="3_en8up"]
[ext_resource type="PackedScene" uid="uid://5qxdluy3wce4" path="res://Scenes/Entities/player/playerTwo.tscn" id="4_1jhj4"]
[ext_resource type="PackedScene" uid="uid://dbqvbechi74v5" path="res://Scenes/Menus/hud.tscn" id="5_6k7rp"]

[node name="level_7" type="Node2D"]
script = ExtResource("1_uojfp")

[node name="dungeonTileSet" parent="." instance=ExtResource("2_fk8c7")]
layer_0/tile_data = PackedInt32Array(262152, 65536, 5, 196616, 0, 1, 131080, 0, 1, 65544, 0, 1, 8, 0, 1, -65528, 0, 1, -131064, 0, 1, -196600, 0, 1, -262136, 0, 1, -327672, 65536, 4, -327673, 65536, 2, -327674, 65536, 2, -327675, 65536, 2, -327676, 65536, 2, -327677, 65536, 2, -327678, 65536, 2, -327679, 65536, 2, -327680, 65536, 2, -262145, 65536, 2, -262146, 65536, 2, -262147, 65536, 2, -262148, 65536, 2, -262149, 65536, 2, -262150, 65536, 2, -262151, 65536, 2, -262152, 65536, 2, -262153, 0, 4, -196617, 131072, 1, -131081, 131072, 1, -327690, 0, 0, -262154, 0, 1, -196618, 0, 1, -131082, 0, 1, -65546, 0, 1, -10, 0, 1, 65526, 0, 1, 131062, 0, 1, 196598, 0, 1, 262134, 0, 1, 327670, 0, 1, 393207, 65536, 2, 393206, 0, 2, 393208, 65536, 2, 393209, 65536, 2, 393210, 65536, 2, 393211, 65536, 2, 393212, 65536, 2, 393213, 65536, 2, 393214, 65536, 2, 393215, 65536, 2, 327680, 65536, 2, 327681, 65536, 2, 327682, 65536, 2, 327683, 65536, 2, 327684, 65536, 2, 327685, 65536, 2, 327686, 65536, 2, 327687, 65536, 2, 327688, 65536, 2, 327689, 131072, 2, 262153, 131072, 1, 196617, 131072, 1, 131081, 131072, 1, -196599, 131072, 1, -131063, 131072, 1, -65527, 131072, 1, 9, 131072, 1, 65545, 131072, 1, -262135, 131072, 1, -327671, 131072, 1, -393207, 131072, 0, -393208, 65536, 0, -393209, 65536, 0, -393210, 65536, 0, -393211, 65536, 0, -393212, 65536, 0, -393213, 65536, 0, -393214, 65536, 0, -393215, 65536, 0, -393216, 65536, 0, -327681, 65536, 0, -327682, 65536, 0, -327683, 65536, 0, -327684, 65536, 0, -327685, 65536, 0, -327686, 65536, 0, -327687, 65536, 0, -327688, 65536, 0, -327689, 65536, 0, -196616, 65536, 6, 262151, 65536, 0, 262150, 65536, 0, 262146, 65536, 5, 262145, 65536, 0, 262144, 0, 5, 327679, 65536, 5, 327678, 65536, 0, 327677, 65536, 0, 327673, 65536, 0, 327672, 65536, 0, 327671, 0, 5, 262135, 131072, 1, 196599, 131072, 1, 131063, 131072, 1, 65527, 131072, 1, -9, 131072, 1, -65545, 131072, 1, -131078, 262144, 1, -196614, 262144, 0, -196615, 0, 6, -131079, 0, 6, -131080, 393216, 5, -65544, 262144, 3, -8, 0, 6, 65528, 0, 6, 131064, 65536, 3, 196600, 262144, 3, 262137, 0, 6, 262138, 0, 6, 196603, 131072, 3, 262139, 0, 6, 327675, 65536, 0, 327674, 65536, 0, 327676, 65536, 0, 196604, 0, 6, 262141, 196608, 0, 196606, 0, 6, 65534, 0, 6, 65533, 131072, 6, -5, 0, 6, -131077, 0, 6, -196613, 0, 6, -196612, 0, 6, -131076, 0, 6, -65540, 0, 6, -65539, 0, 6, -196611, 0, 6, -196610, 0, 6, -196609, 0, 6, -262144, 0, 6, -262143, 0, 6, -262142, 0, 6, -196606, 0, 6, -131070, 0, 6, -131071, 0, 6, -131072, 0, 6, -65537, 0, 6, -65538, 0, 6, 196607, 262144, 5, 262143, 0, 0, 196608, 131072, 0, 131072, 327680, 5, 1, 0, 6, 131073, 0, 6, 196609, 0, 6, 196612, 0, 6, 262148, 65536, 0, 262147, 65536, 0, 262149, 65536, 0, 196613, 0, 6, 196614, 0, 6, 196615, 393216, 5, 131079, 393216, 3, 7, 0, 6, -65529, 0, 6, -131065, 0, 6, -196601, 0, 6, -262137, 0, 6, -262138, 0, 6, -262139, 262144, 0, -262140, 0, 6, -262141, 0, 6, -196605, 0, 6, -131069, 0, 6, -196604, 0, 6, -196603, 262144, 1, -131067, 262144, 1, -65531, 262144, 2, -65532, 0, 6, 4, 196608, 3, 3, 0, 6, 2, 131072, 6, -65530, 0, 6, -131066, 0, 6, -196602, 0, 6, -65542, 262144, 1, -65543, 0, 6, -7, 0, 6, 131065, 131072, 3, -6, 262144, 2, 196601, 393216, 3, 131066, 0, 6, 196605, 0, 6, -4, 0, 6, -2, 65536, 3, -1, 65536, 3, -65536, 65536, 3, -65535, 65536, 3, 131074, 0, 6, -65533, 0, 6, 65541, 0, 6, 262136, 0, 6, 196602, 0, 3, 262142, 0, 6, 131070, 0, 6, 131069, 262144, 6, 131067, 0, 6, 131068, 0, 6, 131071, 262144, 5, 65535, 262144, 4, 0, 327680, 4, -3, 0, 3, -65541, 0, 6, -196607, 0, 6, -196608, 0, 6, -131073, 0, 6, -131074, 0, 6, -131075, 0, 6, -131068, 0, 6, 65540, 0, 6, 65539, 0, 6, 65537, 0, 6, 65536, 327680, 5, -65534, 131072, 3, 65538, 262144, 6, 65529, 0, 6, 65530, 0, 6, 65531, 196608, 3, 65532, 0, 6, 131075, 0, 6, 196610, 196608, 0, 131077, 131072, 3, 131076, 0, 3, 65542, 0, 3, 6, 0, 6, 131078, 262144, 3, 65543, 65536, 3, 5, 0, 6, 262140, 65536, 6, 196611, 65536, 6)
layer_1/tile_data = PackedInt32Array(196606, 0, 7, 131073, 0, 7)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="player" parent="." instance=ExtResource("3_en8up")]
position = Vector2(-120, 0)

[node name="playerTwo" parent="." instance=ExtResource("4_1jhj4")]
position = Vector2(120, 0)

[node name="HUD" parent="." node_paths=PackedStringArray("player_one", "player_two") instance=ExtResource("5_6k7rp")]
player_one = NodePath("../player")
player_two = NodePath("../playerTwo")
